# flightparse

./: .gitignore  CMakeLists.txt  README.md
data/: sample_flight.csv
src/: analyzer.cpp  analyzer.h  fdr_parser.cpp  fdr_parser.h  main.cpp  report_generator.cpp  report_generator.h  validator.cpp  validator.h
src/models/: Anomaly.h  FDRRecord.h  FieldMetaData.h  ReportMetrics.h  ValidationError.h  ValidationIssue.h  ValidationWarning.h
